mas terra, menos raster y sp

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -126,14 +126,11 @@ importFrom(quickPlot,isRstudioServer)
 importFrom(raster,"crs<-")
 importFrom(raster,buffer)
 importFrom(raster,calc)
-importFrom(raster,cellFromXY)
-importFrom(raster,compareCRS)
 importFrom(raster,crop)
 importFrom(raster,crs)
 importFrom(raster,extent)
 importFrom(raster,extract)
 importFrom(raster,getValues)
-importFrom(raster,isLonLat)
 importFrom(raster,mask)
 importFrom(raster,maxValue)
 importFrom(raster,ncell)
@@ -158,12 +155,12 @@ importFrom(reproducible,projectInputs)
 importFrom(reproducible,showCache)
 importFrom(sf,"%>%")
 importFrom(sf,"st_crs<-")
-importFrom(sf,as_Spatial)
 importFrom(sf,st_area)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_centroid)
 importFrom(sf,st_collection_extract)
 importFrom(sf,st_crs)
+importFrom(sf,st_is_longlat)
 importFrom(sf,st_multipoint)
 importFrom(sf,st_nearest_points)
 importFrom(sf,st_transform)
@@ -191,9 +188,13 @@ importFrom(stats,rbeta)
 importFrom(stats,rnorm)
 importFrom(stats,terms)
 importFrom(terra,buffer)
+importFrom(terra,cellFromXY)
+importFrom(terra,compareGeom)
+importFrom(terra,ncell)
 importFrom(terra,patches)
 importFrom(terra,rast)
 importFrom(terra,res)
+importFrom(terra,set.values)
 importFrom(terra,values)
 importFrom(terra,xyFromCell)
 importFrom(utils,getFromNamespace)
