init and spread functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,7 +93,6 @@ importFrom(data.table,setnafill)
 importFrom(data.table,setnames)
 importFrom(data.table,setorderv)
 importFrom(fastDummies,dummy_cols)
-importFrom(fasterize,fasterize)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,png)
 importFrom(graphics,abline)
@@ -190,12 +189,16 @@ importFrom(stats,terms)
 importFrom(terra,buffer)
 importFrom(terra,cellFromXY)
 importFrom(terra,compareGeom)
+importFrom(terra,extract)
 importFrom(terra,ncell)
 importFrom(terra,patches)
 importFrom(terra,rast)
+importFrom(terra,rasterize)
 importFrom(terra,res)
 importFrom(terra,set.values)
+importFrom(terra,setValues)
 importFrom(terra,values)
+importFrom(terra,vect)
 importFrom(terra,xyFromCell)
 importFrom(utils,getFromNamespace)
 importFrom(utils,head)
