--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ import(methods)
 importFrom(DEoptim,DEoptim)
 importFrom(DEoptim,DEoptim.control)
 importFrom(EnvStats,demp)
+importFrom(LandR,.compareCRS)
 importFrom(LandR,asInteger)
 importFrom(LandR,rescale)
 importFrom(RhpcBLASctl,blas_get_num_procs)
@@ -73,6 +74,7 @@ importFrom(RhpcBLASctl,omp_set_num_threads)
 importFrom(SpaDES.tools,distanceFromEachPoint)
 importFrom(SpaDES.tools,rasterizeReduced)
 importFrom(SpaDES.tools,spread)
+importFrom(SpaDES.tools,spread2)
 importFrom(crayon,blurred)
 importFrom(crayon,green)
 importFrom(crayon,yellow)
@@ -158,6 +160,7 @@ importFrom(sf,st_area)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_centroid)
 importFrom(sf,st_collection_extract)
+importFrom(sf,st_coordinates)
 importFrom(sf,st_crs)
 importFrom(sf,st_is_longlat)
 importFrom(sf,st_multipoint)
@@ -166,9 +169,6 @@ importFrom(sf,st_transform)
 importFrom(sf,st_zm)
 importFrom(sp,"coordinates<-")
 importFrom(sp,SpatialPoints)
-importFrom(sp,SpatialPointsDataFrame)
-importFrom(sp,identicalCRS)
-importFrom(sp,spTransform)
 importFrom(stats,as.formula)
 importFrom(stats,coefficients)
 importFrom(stats,dbinom)
@@ -188,7 +188,6 @@ importFrom(stats,rnorm)
 importFrom(stats,terms)
 importFrom(terra,buffer)
 importFrom(terra,cellFromXY)
-importFrom(terra,compareGeom)
 importFrom(terra,extract)
 importFrom(terra,ncell)
 importFrom(terra,patches)
