--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -23,22 +23,36 @@ jobs:
 
       - uses: r-lib/actions/setup-pandoc@v2
 
+      - name: Install macOS system dependencies
+        if: runner.os == 'macOS'
+        run: |
+          brew install pkg-config
+          brew install gdal
+
       - uses: r-lib/actions/setup-r@v2
         with:
+          extra-repositories: 'https://r-spatial.r-universe.dev/'
           Ncpus: 2
-          use-public-rspm: true
+          use-public-rspm: false
+
+      - name: Install sf from r-universe
+        run: |
+          install.packages("sf")
+        shell: Rscript {0}
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: |
             any::covr
+            any::sf
             fastshp=?ignore
             NLMR=?ignore
 
       - name: Install additional package dependencies
         run: |
+          pak::pkg_install("remotes")
           pak::pkg_install("ropensci/NLMR")
-          pak::pkg_install("s-u/fastshp")
+          remotes::install_github("s-u/fastshp")
         shell: Rscript {0}
 
       - name: Test coverage
