getNFDB_pointss changes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -121,11 +121,9 @@ importFrom(quickPlot,clearPlot)
 importFrom(quickPlot,dev)
 importFrom(quickPlot,gpar)
 importFrom(quickPlot,isRstudioServer)
-importFrom(raster,"crs<-")
 importFrom(raster,buffer)
 importFrom(raster,calc)
 importFrom(raster,crop)
-importFrom(raster,crs)
 importFrom(raster,extent)
 importFrom(raster,extract)
 importFrom(raster,getValues)
@@ -133,10 +131,7 @@ importFrom(raster,mask)
 importFrom(raster,maxValue)
 importFrom(raster,ncell)
 importFrom(raster,nlayers)
-importFrom(raster,plot)
 importFrom(raster,raster)
-importFrom(raster,res)
-importFrom(raster,shapefile)
 importFrom(raster,stack)
 importFrom(raster,terrain)
 importFrom(raster,trim)
@@ -161,9 +156,9 @@ importFrom(sf,st_crs)
 importFrom(sf,st_is_longlat)
 importFrom(sf,st_multipoint)
 importFrom(sf,st_nearest_points)
+importFrom(sf,st_read)
 importFrom(sf,st_transform)
 importFrom(sf,st_zm)
-importFrom(sp,"coordinates<-")
 importFrom(sp,SpatialPoints)
 importFrom(stats,as.formula)
 importFrom(stats,coefficients)
