remote terrain function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -125,7 +125,6 @@ importFrom(raster,buffer)
 importFrom(raster,calc)
 importFrom(raster,crop)
 importFrom(raster,extent)
-importFrom(raster,extract)
 importFrom(raster,getValues)
 importFrom(raster,mask)
 importFrom(raster,maxValue)
@@ -184,6 +183,7 @@ importFrom(terra,patches)
 importFrom(terra,rast)
 importFrom(terra,rasterize)
 importFrom(terra,res)
+importFrom(terra,set.names)
 importFrom(terra,set.values)
 importFrom(terra,setValues)
 importFrom(terra,values)
