use spread2 names (but preserve 'cells')

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -119,10 +119,8 @@ importFrom(quickPlot,clearPlot)
 importFrom(quickPlot,dev)
 importFrom(quickPlot,gpar)
 importFrom(quickPlot,isRstudioServer)
-importFrom(raster,buffer)
 importFrom(raster,calc)
 importFrom(raster,crop)
-importFrom(raster,extent)
 importFrom(raster,getValues)
 importFrom(raster,mask)
 importFrom(raster,maxValue)
@@ -130,9 +128,7 @@ importFrom(raster,ncell)
 importFrom(raster,nlayers)
 importFrom(raster,raster)
 importFrom(raster,stack)
-importFrom(raster,trim)
 importFrom(raster,unstack)
-importFrom(raster,xyFromCell)
 importFrom(reproducible,Cache)
 importFrom(reproducible,Checksums)
 importFrom(reproducible,checkPath)
@@ -174,6 +170,8 @@ importFrom(stats,rnorm)
 importFrom(stats,terms)
 importFrom(terra,buffer)
 importFrom(terra,cellFromXY)
+importFrom(terra,crop)
+importFrom(terra,extent)
 importFrom(terra,extract)
 importFrom(terra,ncell)
 importFrom(terra,patches)
@@ -183,6 +181,7 @@ importFrom(terra,res)
 importFrom(terra,set.names)
 importFrom(terra,set.values)
 importFrom(terra,setValues)
+importFrom(terra,trim)
 importFrom(terra,values)
 importFrom(terra,vect)
 importFrom(terra,xyFromCell)
