add jeffreyevans/spatialEco to Remotes
pkg was archived on CRAN Oct 2, 2023

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -58,6 +58,7 @@ Suggests:
     spelling,
     testthat
 Remotes:
+    jeffreyevans/spatialEco,
     PredictiveEcology/LandR@development,
     PredictiveEcology/pemisc@development,
     PredictiveEcology/SpaDES.core@development,
