--- a/NAMESPACE
+++ b/NAMESPACE
@@ -121,11 +121,8 @@ importFrom(quickPlot,gpar)
 importFrom(quickPlot,isRstudioServer)
 importFrom(raster,calc)
 importFrom(raster,crop)
-importFrom(raster,getValues)
 importFrom(raster,mask)
 importFrom(raster,maxValue)
-importFrom(raster,ncell)
-importFrom(raster,nlayers)
 importFrom(raster,raster)
 importFrom(raster,stack)
 importFrom(reproducible,Cache)
@@ -173,6 +170,7 @@ importFrom(terra,crop)
 importFrom(terra,ext)
 importFrom(terra,extract)
 importFrom(terra,ncell)
+importFrom(terra,nlyr)
 importFrom(terra,patches)
 importFrom(terra,rast)
 importFrom(terra,rasterize)
