--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(burnProbFromClass)
 export(calcYoungAge)
 export(castCohortData)
 export(chk_duplicatedStartPixels)
+export(cleanUpSpreadFirePoints)
 export(climateRasterToDataTable)
 export(cohortsToFuelClasses)
 export(compareMDC)
