fix for when rstLCC is bigger than RTM

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -167,6 +167,7 @@ importFrom(stats,rnorm)
 importFrom(stats,terms)
 importFrom(terra,buffer)
 importFrom(terra,cellFromXY)
+importFrom(terra,compareGeom)
 importFrom(terra,crop)
 importFrom(terra,ext)
 importFrom(terra,extract)
