--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ importFrom(data.table,copy)
 importFrom(data.table,data.table)
 importFrom(data.table,dcast)
 importFrom(data.table,melt.data.table)
+importFrom(data.table,merge.data.table)
 importFrom(data.table,rbindlist)
 importFrom(data.table,set)
 importFrom(data.table,setDT)
@@ -165,6 +166,7 @@ importFrom(stats,quantile)
 importFrom(stats,rbeta)
 importFrom(stats,rnorm)
 importFrom(stats,terms)
+importFrom(terra,as.data.frame)
 importFrom(terra,buffer)
 importFrom(terra,cellFromXY)
 importFrom(terra,compareGeom)
