--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ importFrom(DEoptim,DEoptim)
 importFrom(DEoptim,DEoptim.control)
 importFrom(EnvStats,demp)
 importFrom(LandR,.compareCRS)
+importFrom(LandR,addPixels2CohortData)
 importFrom(LandR,asInteger)
 importFrom(RhpcBLASctl,blas_get_num_procs)
 importFrom(RhpcBLASctl,blas_set_num_threads)
