use terra for firePolys

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -138,18 +138,15 @@ importFrom(reproducible,projectInputs)
 importFrom(reproducible,showCache)
 importFrom(sf,"%>%")
 importFrom(sf,"st_crs<-")
-importFrom(sf,st_area)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_centroid)
 importFrom(sf,st_collection_extract)
 importFrom(sf,st_coordinates)
 importFrom(sf,st_crs)
-importFrom(sf,st_is_longlat)
 importFrom(sf,st_multipoint)
 importFrom(sf,st_nearest_points)
 importFrom(sf,st_read)
 importFrom(sf,st_transform)
-importFrom(sf,st_zm)
 importFrom(sp,SpatialPoints)
 importFrom(stats,as.formula)
 importFrom(stats,coefficients)
@@ -172,6 +169,7 @@ importFrom(terra,buffer)
 importFrom(terra,cellFromXY)
 importFrom(terra,compareGeom)
 importFrom(terra,crop)
+importFrom(terra,expanse)
 importFrom(terra,ext)
 importFrom(terra,extract)
 importFrom(terra,ncell)
