--- a/NAMESPACE
+++ b/NAMESPACE
@@ -138,6 +138,7 @@ importFrom(reproducible,projectInputs)
 importFrom(reproducible,showCache)
 importFrom(sf,"%>%")
 importFrom(sf,"st_crs<-")
+importFrom(sf,st_area)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_centroid)
 importFrom(sf,st_coordinates)
@@ -168,7 +169,6 @@ importFrom(terra,buffer)
 importFrom(terra,cellFromXY)
 importFrom(terra,compareGeom)
 importFrom(terra,crop)
-importFrom(terra,expanse)
 importFrom(terra,ext)
 importFrom(terra,extract)
 importFrom(terra,ncell)
